# hash-code-2018--smart-cars

./: CMakeLists.txt  main.cpp
headers/: Point.h  Ride.h  Vehicle.h
sources/: Point.cpp  Ride.cpp  Vehicle.cpp
